advanced_portfolio/styles.css
@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&display=swap");

/* GENERICS */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "JetBrains Mono", monospace;
}

html {
  scroll-behavior: smooth;
}

li {
  list-style-type: none;
}

p {
  line-height: 1.5;
  font-size: 16px;
}

a {
  text-decoration: none;
}

button {
  cursor: pointer;
}

section {
  background-color: rgb(245, 245, 245);
  transition: all 300ms ease;
}

input {
  width: 100%;
  background-color: #242424;
  color: white;
  outline: none;
  border: 1px solid #c0c4cc;
  border-top: none;
  border-left: none;
  border-right: none;
  height: 40px;
  transition: all 300ms ease;
}

textarea {
  width: 100%;
  background-color: #242424;
  color: white;
  outline: none;
  border: 1px solid #c0c4cc;
  border-top: none;
  border-left: none;
  border-right: none;
  height: 40px;
  transition: all 300ms ease;
}

textarea {
  resize: vertical;
  height: 100px;
  margin-top: 8px;
}

label {
  font-size: 14px;
  font-weight: bold;
}

input:hover,
textarea:hover {
  border-color: gray;
}

input:focus,
textarea:focus {
  border-color: #00b0ff;
}

.container {
  width: 100%;
  padding: 50px 0;
}

.row {
  width: 100%;
  max-width: 1100px;
  margin: 0 auto;
  padding: 0 12px;
}

body {
  background-color: rgb(245, 245, 245);
}

.title {
  font-size: 86px;
  margin-bottom: 12px;
  text-align: left;
  line-height: 1;
}

.blue {
  color: #00b0ff;
}

.link__hover-effect {
  position: relative;
}

.link__hover-effect--white:after {
  background-color: white;
}

.link__hover-effect--black:after {
  background-color: #242424;
}

.link__hover-effect:after {
  content: "";
  position: absolute;
  bottom: -2px;
  height: 2px;
  width: 0;
  right: 0;
  transition: all 300ms ease;
}

.link__hover-effect:hover:after {
  left: 0;
  width: 100%;
}

.click {
  transition: all 300ms ease;
  cursor: pointer;
}

.click:hover {
  transform: scale(1.1);
}

.click:active {
  transform: scale(0.8);
}

nav,
.scroll,
.header {
  opacity: 1;
  visibility: visible;
  transition: all 600ms 300ms;
}

.modal__open nav,
.modal--open .scroll,
.modal--open .header {
  opacity: 0;
  visibility: hidden;
  transition: all 400ms;
}

.dark-theme .title,
.dark-theme .section__title,
.dark-theme .section__sub-title,
.dark-theme .nav__link--anchor,
.dark-theme .fa-adjust,
.dark-theme .header__para {
  color: white;
}

.dark-theme section {
  background-color: #242424;
}

.dark-theme #personal-logo {
  filter: none;
}

.dark-theme .scroll__icon {
  border-color: white;
}

.dark-theme .scroll__icon:after,
.dark-theme .link__hover-effect--black:after {
  background-color: white;
}

.dark-theme .mail__btn {
  background-color: white;
  color: #242424;
}


/* NAV */

#personal-logo {
  filter: invert(1);
  width: 100px;
  height: 100px;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  height: 100px;
  padding: 0 20px;
}

.nav__link-list {
  display: flex;
  justify-content: space-around;
}

.nav__link {
  margin: 0 12px;
}

.nav__link--anchor {
  text-decoration: none;
  font-size: 16px;
  color: #242424;
  font-weight: 700;
}

.fa-adjust {
  font-size: 20px;
}

/* LANDING PAGE */

#landing-page {
  min-height: 100vh;
}

.header {
  /* center things in middle with pos abs */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  max-width: 1000px;
  padding: 0 30px;
}

.header__para {
  font-size: 24px;
  line-height: 2;
  max-width: 450px;
}

.social__list {
  margin-top: 16px;
  display: flex;
}

.social__link {
  background-color: #00b0ff;
  color: white;
  padding: 6px;
  width: 32px;
  font-size: 18px;
  margin-right: 12px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
}

.mail__btn {
  width: 70px;
  height: 70px;
  font-style: 32px;
  border-radius: 50%;
  border: none;
  background-color: #242424;
  color: white;
  position: fixed;
  bottom: 32px;
  right: 40px;
  z-index: 100;
  box-shadow: 0 12px 30px 0 rgb(0, 0, 0, .5);
}

.fa-envelope {
  font-size: 32px;
}

.scroll {
  position: absolute;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
}

.scroll__icon {
  width: 20px;
  height: 30px;
  border: 2px solid #242424;
  border-radius: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.scroll__icon:after {
  content: "";
  width: 4px;
  height: 6px;
  background-color: #242424;
  border-radius: 2px;
  animation: scroll 1000ms infinite alternate-reverse;
}

@keyframes scroll {
  0% {
    transform: translateY(3px);
  }
  100% {
    transform: translateY(-3px);
  }
}

/* PROJECTS */

#projects {
  display: flex;
  width: 100%;
  justify-content: center;
}

.section__title {
  text-align: center;
  font-size: 48px;
  margin-bottom: 60px;
  z-index: 100;
}

.project__img {
  width: 100%;
  transition: all 550ms ease;
}

.project__wrapper {
  position: relative;
  border-radius: 20px;
  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
  overflow: hidden;
}

.project__wrapper:hover .project__description {
  opacity: 1;
  transform: translateY(-50%);
}

.project__wrapper:hover .project__wrapper--bg {
  opacity: 0.5;
}

.project__wrapper:hover .project__img {
  transform: scale(1.07);
  filter: blur(5px);
}

.project__description {
  position: absolute;
  top: 50%;
  left: 90px;
  opacity: 0;
  transition: opacity 300ms, transform 450ms ease;
  transform: translateY(100%);
  color: white;
  max-width: 550px;
}

.project__wrapper--bg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #1c1d25;
  opacity: 0;
  transition: all 550ms ease;
}

.project__description--title {
  font-size: 40px;
  padding-bottom: 12px;
}

.project__description--sub-title {
  margin-bottom: 8px;
}

.project__description--link {
  color: white;
  font-size: 20px;
}

.project__description--para {
  color: white;
  padding-bottom: 8px;
}

/* FOOTER */

footer {
  position: relative;
  background-color: #242424;
  display: flex;
  padding: 6% 0;
}

.footer__container {
  margin: 0 auto;
}

.footer__row {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.footer__logo-img {
  width: 70px;
}

.footer__social--list {
  width: 100%;
  display: flex;
  justify-content: space-around;
  max-width: 500px;
  margin: 20px 0;
}

.footer__social--link,
.footer__copyright {
  color: white;
}

/* MODAL */

.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  max-width: 1100px;
  height: 700px;
  border-radius: 20px;
  overflow: hidden;
  display: flex;
  visibility: hidden;
  z-index: -1;
  transition: visibility 1s, z-index, box-shadow 0.5s ease;
}

.modal--open .modal {
  z-index: 60;
  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
  visibility: visible;
}

.modal__half {
  width: 50%;
  padding: 40px 72px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
  transition: all 300ms ease-in-out;
}

.modal--open .modal__about, 
.modal--open .modal__contact {
  transform: translateX(0%);
}

.modal__about {
  background-color: rgb(245, 245, 245);
  transform: translateX(-110%);
}

.modal__languages {
  display: flex;
  flex-wrap: wrap;
}

.modal__language {
  width: 25%;
  padding: 16px;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  transition: all 400ms ease;
}

.modal__language:hover .language {
  transform: scale(1);
}

.modal__language:hover {
  filter: brightness(80%);
  transform: scale(0.9);
}

.language {
  position: absolute;
  bottom: -10px;
  transform: scale(0);
  transition: all 300ms ease;
}

.modal__contact {
  transform: translateX(110%);
  background-color: #242424;
  color: white;
}

.modal__language--img {
  width: 100%;
}

.modal__title {
  font-size: 26px;
}

.modal__sub-title {
  margin: 12px 0 24px 0;
  font-size: 14px;
}

.modal__para {
  margin-bottom: 12px;
  line-height: 1.75;
}

.form__item {
  margin-bottom: 20px;
}

.form__submit:hover {
  border-color: white;
  background-color: transparent;
}

.form__submit {
  background-color: #00b0ff;
  border: 2px solid #36bfff;
  border-radius: 4px;
  color: white;
  font-size: 20px;
  font-weight: 700;
  width: 100%;
  max-width: 240px;
  padding: 12px 24px;
  transition: all 300ms ease-in;
}

.form__submit:active {
  background-color: #00b0ff;
  color: #36bfff;
}

#contact__form > *:last-child {
  display: flex;
  justify-content: center;
  margin: 0 auto;
}

.modal__overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
  align-items: center;
  justify-content: center;
}

.modal__overlay--loading {
  background-color: #242424;
  font-size: 80px;
  z-index: -1;
}

.modal__overlay--success {
  background-color: #4bb543;
  font-size: 40px;
  font-weight: 700;
  text-align: center;
  padding: 28px;
  z-index: -1;
}

.modal__overlay--visible {
  z-index: 1;
  display: flex;
}

.fa-spinner {
  animation: spinner 750ms infinite;
}

@keyframes spinner {
  0% {
    transform: rotate(0);
  } 100% {
    transform: rotate(360deg);
  }
}

.modal__exit {
  position: absolute;
  top: 30px;  
  right: 40px;  
  color: white;
  font-size: 36px;
  z-index: 100;
}





/* SHAPES */

.shape {
  position: fixed;
  width: 16px;
  height: 16px;
  z-index: 1;
}

.triangle {
  transform: rotate(-45deg);
}

.shape--0 {
  top: 15vh;
  left: 5vw;
}
.shape--1 {
  top: 15vh;
  left: 50vw;
}
.shape--2 {
  top: 15vh;
  left: 80vw;
}
.shape--3 {
  top: 50vh;
  left: 5vw;
}
.shape--4 {
  top: 50vh;
  left: 50vw;
}
.shape--5 {
  top: 50vh;
  left: 80vw;
}
.shape--6 {
  top: 80vh;
  left: 5vw;
}
.shape--7 {
  top: 80vh;
  left: 50vw;
}
.shape--8 {
  top: 80vh;
  left: 80vw;
}



/* Tablets and large phones */

@media (max-width: 768px) {
  .title {
    font-size: 80px;
  }

  .header__para {
    font-size: 20px;
  }

  .modal {
    top: 0;
    left: 0;
    height: auto;
    transform: none;
    width: 100%;
    flex-direction: column;
  }

  .modal__half {
    width: 100%;
  }
}



/* Small phones */

@media (max-width: 480px) {
  .title {
    font-size: 52px;
  }

  .header__para {
    font-size: 18px;
  }

  .nav__link:first-child {
    display: none;
  }

  .project__description--para {
    display: none;
  }

  .project__description {
    left: 0;
    padding: 0;
    width: 100%;
    text-align: center;
  }

  .project__description--sub-title {
    margin-bottom: 8px;
  }

  .modal__half {
    padding: 40px;
  }
}

